Deploy AESC - PDF profissional

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-numpy
-plotly
-fpdf2
-xlsxwriter
+streamlit>=1.36.0
+pandas>=2.1.0
+numpy>=1.26.0
+plotly>=5.18.0
+fpdf2>=2.7.8
+xlsxwriter>=3.1.0
